Fixed colorpicker align with other inputs

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -3156,6 +3156,7 @@ img.help_tip {
 			border: 1px solid #ddd;
 			/* rtl:ignore */
 			border-right: 0;
+			margin-left: -3px;
 		}
 
 		.colorpick {
